# panstwa-miasta

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .hermesignore  .skillsrc  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  capacitor.config.json  data.py  docker-compose.yml  extract_jobs.py  index.html  main.py  manager.py  package-lock.json  package.json  panstwa_miasta.db  pyproject.toml  sonar-project.properties  tsconfig.json  vite.config.ts
.cursor/: mcp.json
.gemini/: hooks.json
.githooks/: pre-commit
.github/: dependabot.yml
.playwright-cli/: page-2026-05-27T10-51-23-235Z.yml
backend/: Dockerfile  Klasyfikacja-KZiS-2014-z-póżn.-zm.-_Dz.U.-z-2016-poz.1876_.csv
data/: 8_-_Wykaz_imion_męskich_osób_żyjących_wg_pola_imię_pierwsze_występujących_w_rejestrze_PESEL_bez_zgonów.csv  8_-_Wykaz_imion_żeńskich_osób_żyjących_wg_pola_imię_pierwsze_występujących_w_rejestrze_PESEL_bez_zgonów.csv  hierarchiczny.json  raw_jobs.txt  zawody.txt
deploy/: Caddyfile.example  README.md  SEO-ops.md  SUDOERS.example  TURSO-cutover.md  env.example  maintenance-disable.sh  maintenance-enable.sh  panstwa-miasta.service.example  prod-smoke-check.sh  turso-poll-healthz.sh  turso-pre-cutover.sh  turso-staging-smoke.sh  vps-pull-and-restart.sh  vps-rollback.sh
frontend-desktop/: index.html  package.json  tsconfig.json  vite.config.ts
frontend-mobile/: capacitor.config.json  index.html  package.json  vite.config.ts
scripts/: apply_official_pl_city_names.py  build_animals_wikipedia_bs4.py  build_cities_from_geonames.py  build_cities_from_plwiki.py  build_cities_polonized.py  build_fauna_flora_gbif_supplement.py  build_fauna_flora_mvp.py  build_jobs_seed.py  build_plants_bs4.py  build_plants_sparql.py  build_polish_cities_wikidata.py  convert_kzis_csv_to_json.py  db_table_counts.py  dev-docker-ngrok.ps1  export_norms_seed_data.py  extract_jobs.py  gbif_fruit_250.py  gbif_fruit_supplement.py  gbif_pl_fruits.py  generate_android_assets.py  init-turso.sh  migrate_css.py  migrate_jobs_kzis.py  (+5 more)
(+238 files in other folders)
