[project]
name = "panstwa-miasta"
version = "0.1.0"
description = "Multiplayer Countries & Cities Game"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panstwa_miasta"]
