[project]
name = "panstwa-miasta"
version = "0.1.0"
description = "Multiplayer Countries & Cities Game"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.22.1",
    "aiofiles>=23.2.0",
    "libsql>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panstwa_miasta"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",  # needed by TestClient
    "beautifulsoup4>=4.12.0",  # skrypty build: scrape HTML (fauna/flora)
    "ruff>=0.6.0",
    "ty>=0.0.28",
]
gbif = [
    "pygbif>=0.6.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/panstwa_miasta --cov-report=term-missing --cov-report=xml --junitxml=test-results.xml"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist", "node_modules", ".scannerwork"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ty.src]
include = ["src"]
